[package]
name = "librgrn"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.18.0"
chrono = "0.4.44"
jsonwebtoken = "10.3.0"
rand = "0.10"
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v1", "v3", "v4", "v5"] }
